local logs and images as the backend will be disabled soon

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "WmWmP",
-  "name": "Create React App Sample",
+  "name": "Whip Ma Whop Ma Pic",
   "icons": [
     {
       "src": "favicon.ico",
